# MSR

./: .gitignore  README.md  blog-msr-gui.md  blog-msr-sync.md
.codebuddy/plans/: msr-cli-juejin-blog_fa53f940.md
.codebuddy/rules/: language.md  rule.md  use-chinese-maple.md  var.md
.kiro/specs/: README.md
.kiro/specs/global-config/: .config.kiro  code-review.md  design.md  requirements.md  tasks.md  test-report.md
.kiro/specs/mcp-sync-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/msr-cli/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.lingma/rules/: language.md  rule.md
.qoder/: settings.local.json
.qoder/hooks/: secret-detect.sh
.qoder/plans/: MSR-gui_NiceGUI_方案_c9ad5d75.md  添加_Cursor_IDE_支持_33b10ae4.md
.qoder/repowiki/zh/content/: 平台支持.md  快速开始.md  故障排除.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  异常处理.md  核心类.md  配置选项.md
.qoder/repowiki/zh/content/IDE适配器/: IDE适配器.md  适配器开发指南.md  适配器架构设计.md  (+1 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/rules/: use-chinese-maple.md  var.md
.trae/rules/: language.md  rule.md  var.md
MSR-cli/: README.md  pyproject.toml
MSR-cli/.hypothesis/constants/: 001072494747a980  069be12a93d75537  10e4cfe192d092d7  1d1e085779d9947b  3e0835ae8934e31c  49aa0cf6a42ab053  4aa07a3072ef13d3  5049d45c931e195d  5c3503cf3b70f87e  660a74d3c03e3495  70057636840a1e63  8611370cd2af2172  8c36d34bb62fc886  9db866ce972cbb78  a3d94e64bd1b28d2  a563957780d14284  ae324c3421b906a7  d29c74d5385800f7  d2e95aad1a56e652  d63b6b8542b79fc3  e18da8cf1a377e3d  e54d66bb24939761  e7a3a5d9289c66f7
MSR-cli/docs/: code-review.md  test-report.md  usage.md
MSR-cli/msr_sync/: __init__.py  cli.py  constants.py
MSR-cli/msr_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MSR-cli/msr_sync/adapters/: __init__.py  antigravity.py  base.py  codebuddy.py  cursor.py  kiro.py  lingma.py  qoder.py  registry.py  trae.py
MSR-cli/msr_sync/commands/: __init__.py  import_cmd.py  init_cmd.py  list_cmd.py  remove_cmd.py  sync_cmd.py
MSR-cli/msr_sync/core/: __init__.py  config.py  exceptions.py  frontmatter.py  platform.py  repository.py  source_resolver.py  version.py
MSR-cli/tests/: __init__.py  conftest.py  test_adapters.py  test_adapters_base.py  test_antigravity_adapter.py  test_bug_condition_mcp.py  test_cli_integration.py  test_codebuddy_adapter.py  test_commands.py  test_config.py  test_cursor_adapter.py  test_exceptions.py  test_frontmatter.py  test_integration.py  test_kiro_adapter.py  test_lingma_adapter.py  test_mcp_merge.py  test_platform.py  test_preservation_mcp.py  test_qoder_adapter.py  test_repository.py  test_source_resolver.py  test_trae_adapter.py  test_version.py
MSR-gui/: README.md  pyproject.toml
MSR-gui/msr_gui/: __init__.py  main.py  state.py  utils.py
MSR-gui/msr_gui/components/: config_tree.py  ide_selector.py  log_viewer.py  rule_editor.py  sidebar.py  version_timeline.py
MSR-gui/msr_gui/pages/: __init__.py  browse.py  dashboard.py  import_page.py  settings.py  sync.py
MSR-gui/msr_gui/services/: import_service.py  repo_service.py  sync_service.py
MSR-gui/scripts/: fetch_icons.py
docs/: idea.md
msr-sync-usage/: SKILL.md
(+35 files in other folders)
