[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msr-gui"
version = "0.1.1"
description = "MSR Sync Manager - 可视化管理界面"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "maplewan"}
]
license = {text = "MIT"}
keywords = ["msr", "ai-ide", "configuration", "sync", "gui", "nicegui", "rules", "mcp", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "nicegui>=2.0",
    "msr-sync>=0.1.3",
    "pywebview>=5.0",
]

[project.optional-dependencies]
native = ["pywebview>=5.0"]
dev = ["pyinstaller"]

[project.scripts]
msr-gui = "msr_gui.main:run"

[tool.setuptools.package-data]
msr_gui = [
    "assets/**/*",
    "assets/*",
]

[project.urls]
Homepage = "https://github.com/maplewan/MSR-v2"
Repository = "https://github.com/maplewan/MSR-v2"
"Bug Tracker" = "https://github.com/maplewan/MSR-v2/issues"
